--- a/components/com_kunena/site/template/blue_eagle/css/kunena.20.css
+++ b/components/com_kunena/site/template/blue_eagle/css/kunena.20.css
@@ -12,22 +12,21 @@
 /* Layout */
 
 #Kunena .kpagination span {
-	border-style:solid;
-	border-width: 1px;
-	font-weight:bold;
-	padding:1px 5px;
+	border: 1px solid;
+	font-weight: bold;
+	padding: 1px 5px;
 	margin: 2px;
 }
 
 #Kunena ul#kbbcode-toolbar li a.kbbcode-separator {
-	background-position:-400px 0;
+	background-position: -400px 0;
 	width: 8px;
 	cursor: default;
 }
 
 #Kunena .kheader h2,
 #Kunena .kheader h2 a {
-	font-size:16px ;
+	font-size: 16px;
 }
 
 /* Grid */
@@ -43,20 +42,25 @@
 	margin: 0;
 	display: inline-block;
 }
+
 #Kunena a.grid_true,
 #Kunena a.grid_unpublish {
 	background: url("../images/publish.png") no-repeat left center;
 }
+
 #Kunena a.grid_false,
 #Kunena a.grid_publish {
 	background: url("../images/unpublish.png") no-repeat left center;
 }
+
 #Kunena a.move_up {
 	background: url("../images/arrow-up.png") no-repeat left center;
 }
+
 #Kunena a.move_down {
 	background: url("../images/arrow-down.png") no-repeat left center;
 }
+
 #Kunena .kgrid-lock a.grid_true {
 	background: url("../images/icon-locked.png") no-repeat left center;
 }
@@ -65,27 +69,32 @@
 	clear: both;
 	min-height: 28px;
 }
+
 #Kunena span.ktopicpoll {
 	background: url("../images/icons/poll.png") no-repeat left center;
 	margin: 2px;
 	width: 32px;
 	height: 32px;
-	float:right;
+	float: right;
 }
 
 #Kunena .kspoiler {
 	cursor: auto;
 }
+
 #Kunena .kspoiler-header {
 	cursor: pointer;
 }
+
 #Kunena .kspoiler-title {
 	font-weight: bold;
 }
+
 #Kunena .kspoiler-expand,
 #Kunena .kspoiler-hide {
 	color: #888;
 }
+
 #Kunena .kspoiler-wrapper {
 	border-bottom: 1px solid black;
 	border-top: 1px solid black;
@@ -93,6 +102,7 @@
 	width: 100%;
 	background-color: #ffc;
 }
+
 #Kunena .kspoiler-content {
 	margin: 10px 5px;
 }
@@ -137,26 +147,33 @@
 	height: 10px;
 	max-width: none;
 }
+
 #Kunena .kprofileboxcnt .input span input[type="checkbox"] {
-	margin-top: 0px !important;
+	margin-top: 0 !important;
 }
+
 #Kunena .kprofileboxcnt .kbutton {
-	margin-top: 0px !important;
+	margin-top: 0 !important;
 }
+
 #Kunena sup.knewchar {
 	position: static;
 }
+
 #Kunena .kcol-mid label {
 	display: inline;
 }
+
 #subscribeMe {
-	margin-top: 0px;
+	margin-top: 0;
 }
+
 #Kunena .kfile-hide input {
 	vertical-align: baseline;
 }
-#Kunena #ktab li a::before	{
-	content:"";
+
+#Kunena #ktab li a::before {
+	content: "";
 }
 
 /* Menu fixes for Gantry */
