--- a/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
+++ b/components/com_kunena/site/template/blue_eagle/css/kunena.default.css
@@ -54,17 +54,27 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 #Kunena span {
 	font-family: Arial, Helvetica, sans-serif;
 }
+
 #Kunena ul li {
 	background: none;
 }
-#Kunena .divider {color:#999999;}
+
+#Kunena .divider {
+	color: #999999;
+}
 
 #Kunena a:link,
 #Kunena a:visited,
 #Kunena a:active,
-#Kunena a:focus { color: #5388B4 !important; background-color:transparent !important;}
+#Kunena a:focus {
+	color: #5388B4 !important;
+	background-color: transparent !important;
+}
 
-#Kunena a:hover { color: #FF0000 !important; background-color:transparent !important; }
+#Kunena a:hover {
+	color: #FF0000 !important;
+	background-color: transparent !important;
+}
 
 #Kunena .icon-knewchar,
 #Kunena .knewchar {
@@ -76,18 +86,21 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 	font-size: 32px;
 	margin-top: 5px;
 }
+
 /* Block styling
 ----------------------------------------------------------------------------------------------- */
 
 #Kunena div.kblock {
-	border-bottom-color:#BFC3C6;
+	border-bottom-color: #BFC3C6;
 	background-color: #FFFFFF;
 }
+
 #Kunena .kblock div.kheader {
 	background: #5388B4 !important;
-	border-bottom-color:#D9D9D9;
+	border-bottom-color: #D9D9D9;
 	color: #FFFFFF;
 }
+
 #Kunena .kheader h2,
 #Kunena .kheader h2 a,
 #Kunena .kheader h3,
@@ -99,80 +112,100 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 	background-color: #5388B4;
 	color: #FFFFFF;
 }
+
 #Kunena div.kblock div.ktitle h1,
 #Kunena div.kblock div.ktitle h2 {
 	color: #FFFFFF;
 }
+
 #Kunena div.kblock div.kbody {
-	border-color:#BFC3C6;
+	border-color: #BFC3C6;
 }
+
 #Kunena div.kblock div.khelprulescontent,
 #Kunena div.kblock div.kfheadercontent {
 	background-color: #FFFFFF;
 	color: #000000;
 }
+
 #Kunena div.kblock div.khelprulesjump {
 	border-color: #BFC3C6;
 	background-color: #FFFFFF;
 	color: #000000;
 }
+
 #Kunena div.kblock div.kactions {
 	background-color: #F2F1EE;
-	color:#FFF;
-	border-left:1px solid #BFC3C6;
-	border-bottom:1px solid #BFC3C6;
-	border-right:1px solid #BFC3C6;
+	color: #FFF;
+	border-left: 1px solid #BFC3C6;
+	border-bottom: 1px solid #BFC3C6;
+	border-right: 1px solid #BFC3C6;
 }
+
 #Kunena div.kblock div.kactions a {
-	color:#FFFFFF !important;
-	background-color:transparent !important;
+	color: #FFFFFF !important;
+	background-color: transparent !important;
 }
+
 #Kunena tr.krow1 td {
 	background-color: #F2F1EE;
 }
+
 #Kunena tr.krow2 td {
 	background-color: #FFFFFF;
 }
+
 #Kunena tr.ksth {
 	background-color: #737373;
 	color: #fff;
 	font-family: Arial, Helvetica, sans-serif;
 }
+
 #Kunena td.kcol-ktopicreplies {
 	color: #999999;
 }
+
 #Kunena td.kcol-ktopicreplies strong {
 	color: #999999;
 }
+
 #Kunena span.kcat-topics,
 #Kunena span.kcat-replies {
-	color:#999999;
+	color: #999999;
 }
+
 #Kunena span.kcat-topics-number,
 #Kunena span.kcat-replies-number {
 	color: #999999;
 }
+
 #Kunena .klatest-avatar,
 #Kunena .ktopic-latest-post-avatar {
 	border-color: #BFC3C6;
 }
+
 #Kunena .kfooter-time {
 	color: #999999;
 }
+
 #Kunena .kalert {
 	color: #FF0000;
 }
+
 #Kunena td.kcol-first {
 	border-bottom-color: #BFC3C6;
 }
+
 #Kunena td.kcol-mid {
 	border-left-color: #BFC3C6;
 	border-bottom-color: #BFC3C6;
 }
+
 #Kunena td.kcol-last {
 	border-left-color: #BFC3C6;
 	border-bottom-color: #BFC3C6;
 }
+
 #Kunena td.ktopicmodule {
 	border-bottom-color: #BFC3C6;
 }
@@ -219,10 +252,11 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 	background-color: transparent;
 	color: #000000;
 }
+
 #ktab div.moduletable ul.menu,
 #ktab div.moduletable ul.menu li a,
 #ktab div.moduletable ul.menu li a span {
-	background-image:none!important;
+	background-image: none !important;
 }
 
 #Kunena #ktab a {
@@ -234,10 +268,12 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 	font-family: Arial, Helvetica, sans-serif;
 	color: #FFFFFF;
 }
+
 #Kunena #ktab a:hover span,
-#Kunena #ktab li.Kunena-item-active a span	{
+#Kunena #ktab li.Kunena-item-active a span {
 	color: #FFFFFF;
 }
+
 #Kunena select,
 #Kunena select:focus,
 #Kunena select:hover {
@@ -262,9 +298,11 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 #Kunena .kbutton-back {
 	color: #000000;
 }
+
 #Kunena input.kinput {
 	border-color: #999999;
 }
+
 #Kunena .kbutton:hover,
 #Kunena .kbutton:focus {
 	background-color: #609FBF;
@@ -277,11 +315,13 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 	color: #000000;
 	border-color: #BFC3C6;
 }
+
 #Kunena .klist-actions-bottom {
 	background-color: #FFFFFF;
 	color: #000000;
 	border-color: #BFC3C6;
 }
+
 #Kunena .klist-actions-info a {
 	color: #009933;
 }
@@ -296,6 +336,7 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 	border-left-color: #BFC3C6;
 	color: #666666;
 }
+
 #Kunena .klist-actions-info-all {
 	color: #999999;
 }
@@ -319,19 +360,22 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 	border-left-color: #BFC3C6;
 	color: #666666;
 }
+
 #Kunena .klist-top {
 	background-color: #FFFFFF;
 	border-color: #BFC3C6;
 }
 
 #Kunena .klist-bottom {
-	background-color:#FFFFFF;
-	border-color:#BFC3C6;
+	background-color: #FFFFFF;
+	border-color: #BFC3C6;
 }
+
 #Kunena .klist-markallcatsread {
 	border-color: #BFC3C6;
 	background-color: #FFFFFF;
 }
+
 #Kunena .klist-categories {
 	border-left-color: #BFC3C6;
 	color: #666666;
@@ -340,42 +384,50 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 /*---------- Pagination ------------- */
 
 #Kunena .kpagination a {
-	border-color:#5388B4;
+	border-color: #5388B4;
 	background-color: #ffffff !important;
 }
+
 #Kunena .kpagination .active {
-	border-color:#5388B4;
-	background-color:#5388B4;
-	color:#FFFFFF;
+	border-color: #5388B4;
+	background-color: #5388B4;
+	color: #FFFFFF;
 }
+
 #Kunena .kpagination span {
-	border-color:#5388B4;
-	background-color:#5388B4;
-	color:#FFFFFF;
+	border-color: #5388B4;
+	background-color: #5388B4;
+	color: #FFFFFF;
 }
+
 #Kunena .kpagination a:link,
 #Kunena .kpagination a:visited {
-	color:#5388B4;
+	color: #5388B4;
 }
-#Kunena .kpagination a:hover{
-	border-color:#5388B4;
+
+#Kunena .kpagination a:hover {
+	border-color: #5388B4;
 	color: #ffffff;
 	background-color: #609FBF;
 }
+
 #Kunena div.ktopic-title-cover ul.kpagination li.page {
-	color:#999;
+	color: #999;
 }
+
 #Kunena div.ktopic-title-cover ul.kpagination a {
-	border-color:#bcbcbc;
+	border-color: #bcbcbc;
 	background-color: #ffffff;
 }
-#Kunena div.ktopic-title-cover ul.kpagination a:hover{
-	border-color:#5388B4;
+
+#Kunena div.ktopic-title-cover ul.kpagination a:hover {
+	border-color: #5388B4;
 	color: #ffffff;
 	background-color: #609FBF;
 }
+
 #Kunena span.ktopic-views {
-	color:#999999;
+	color: #999999;
 }
 
 #Kunena span.ktopic-views-number {
@@ -388,16 +440,19 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 #Kunena td.kprofileboxcnt ul.kprofilebox-welcome li input.kbutton {
 	background-color: transparent;
 }
+
 #Kunena td.kprofileboxcnt ul.kprofilebox-welcome li input.kbutton:hover {
 	background-color: #609FBF;
 }
+
 #Kunena div#kforum-head {
 	border-left-color: #BFC3C6;
 	border-right-color: #BFC3C6;
 	border-bottom-color: #BFC3C6;
 }
+
 #Kunena div#kmoderatorslist div.kbody {
-	border-color:#CCCCCC;
+	border-color: #CCCCCC;
 	background-color: #FFFFFF;
 }
 
@@ -405,11 +460,13 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 ----------------------------------------------------------------------------------------------- */
 #Kunena fieldset {
 	background-color: #fff;
-	border-color:#CCCCCC;
+	border-color: #CCCCCC;
 }
+
 #Kunena div#ksearchresult div.kresult-title {
 	border-bottom-color: #DDDDDD;
 }
+
 #Kunena div#ksearchresult div.resultcat {
 	border-top-color: #BFC3C6;
 }
@@ -425,6 +482,7 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 #Kunena .kprofilebox-right {
 	border-left-color: #BFC3C6;
 }
+
 #Kunena div.kpbox {
 	border-bottom-color: #BFC3C6;
 }
@@ -440,21 +498,26 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 #Kunena h2 {
 	color: #FFFFFF;
 }
+
 #Kunena h2 a {
 	color: #FFFFFF !important;
 }
+
 #Kunena h1 a:link,
 #Kunena h1 a:active,
 #Kunena h1 a:visited {
 	color: #FFFFFF !important;
 }
+
 #Kunena h2 span.kheadbtn a {
 	border-color: #FFF;
 	background-color: #609FBF;
 }
+
 #Kunena h2 span.kheadbtn:hover a {
 	border-color: #FFF;
 }
+
 #Kunena .ktitle,
 #Kunena a.ktitle {
 	color: #FFFFFF;
@@ -468,7 +531,8 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 #Kunena div.kthead-title a {
 	font-family: Lucida Grande, Lucida, Arial, Helvetica, sans-serif;
 }
-#Kunena div.kthead-moderators  {
+
+#Kunena div.kthead-moderators {
 	color: #666;
 }
 
@@ -511,10 +575,11 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 -------------------------------------------------------------------- */
 
 #Kunena div.kmsg-header {
-	border-bottom-color:#D9D9D9;
+	border-bottom-color: #D9D9D9;
 	background-color: #5388B4;
 	color: #FFFFFF;
 }
+
 #Kunena div.kmsg-header h2 {
 	background-color: #737373;
 }
@@ -530,9 +595,10 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 }
 
 #Kunena div.kmsgattach {
-	background-color:#F8F7EF;
-	border-color:#BFC3C6;
+	background-color: #F8F7EF;
+	border-color: #BFC3C6;
 }
+
 #Kunena div.kmsgtext pre,
 #Kunena div.kmsgtext code {
 	border-left-color: #F4A94F;
@@ -567,12 +633,14 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 }
 
 #Kunena div.kmsgsignature {
-	border-top-color:#BFC3C6;
-	color:#999999;
+	border-top-color: #BFC3C6;
+	color: #999999;
 }
-#Kunena div.kmessage-thankyou{
+
+#Kunena div.kmessage-thankyou {
 	border-top-color: #BFC3C6;
 }
+
 #Kunena .kreply-form {
 	border-color: #BFC3C6;
 }
@@ -613,6 +681,7 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 #Kunena .kmsgtitle-new {
 	color: #FFF;
 }
+
 #Kunena div.kmsg-header-top span.kmsg-id-top a,
 #Kunena div.kmsg-header-bottom span.kmsg-id-bottom a,
 #Kunena div.kmsg-header-left span.kmsg-id-left a,
@@ -622,7 +691,6 @@ Pink forum dark:			#ffd0ff 		RGB: 255/208/255
 
 /* AVATAR POSITION
 ----------------------------------------------------------------------- */
-
 
 /* right
 ----------------------------------------*/
@@ -694,7 +762,7 @@ POST PAGE
 }
 
 #Kunena #kpost-message .postinput:hover,
-#Kunena #kpost-message .postinput:focus	{
+#Kunena #kpost-message .postinput:focus {
 	background-color: #FFFFFF;
 	color: #000000;
 	border-color: #BFC3C6;
@@ -706,7 +774,7 @@ POST PAGE
 	border-color: #BFC3C6;
 }
 
-#Kunena #kpostmessage tr.krow1 .kpostbuttonset td.kposthint	{
+#Kunena #kpostmessage tr.krow1 .kpostbuttonset td.kposthint {
 	background-color: #FFFFCC;
 	border-color: #DDD5BF;
 }
@@ -727,6 +795,7 @@ POST PAGE
 #Kunena table#kpostmessage .ktxtarea {
 	border-color: #BFC3C6;
 }
+
 #Kunena div#khistory tr.ksth a {
 	color: #fff !important;
 }
@@ -737,13 +806,16 @@ POST PAGE
 	border-color: #BFC3C6;
 	background-color: #F2F1EE;
 }
+
 #Kunena #kpostmessage tr.krow1 .kpostbuttonset td,
-#Kunena #kpostmessage tr.krow2 .kpostbuttonset td	{
+#Kunena #kpostmessage tr.krow2 .kpostbuttonset td {
 	border-bottom-color: #BFC3C6;
 }
+
 #Kunena #kpost-result div {
 	border-color: #999;
 }
+
 #Kunena div#kcolor-palette,
 #Kunena div#link,
 #Kunena div#image,
@@ -757,12 +829,14 @@ POST PAGE
 #Kunena .kicon-button {
 	color: #FFF;
 }
+
 #Kunena .kicon-button span span {
 	color: #ffffff;
 }
+
 #Kunena form.kform-report input,
 #Kunena form.kform-report textarea {
-	border-color:#BFC3C6;
+	border-color: #BFC3C6;
 }
 
 /*
@@ -771,12 +845,15 @@ BBCODE BUTTONS
 #Kunena img.kbbcode:hover {
 	background-color: #e4e4e4;
 }
+
 #Kunena div#kbbcode-size-options span:hover {
 	background-color: #e4e4e4;
 }
+
 #Kunena #kbbcode-toolbar li a:hover {
 	background-color: #e4e4e4;
 }
+
 #Kunena ul#kbbcode-toolbar li a#kbbcode-separator1,
 #Kunena ul#kbbcode-toolbar li a#kbbcode-separator2,
 #Kunena ul#kbbcode-toolbar li a#kbbcode-separator3,
@@ -787,6 +864,7 @@ BBCODE BUTTONS
 #Kunena ul#kbbcode-toolbar li a#kbbcode-separator8 {
 	background-color: #eeeeee;
 }
+
 #Kunena .kattachment .kbutton {
 	color: #000000;
 }
@@ -802,28 +880,34 @@ Multi file upload for bbcode editor
 	border-color: #999999;
 	color: #000000;
 }
+
 #Kunena .kfile-input-button:hover,
 #Kunena .kfile-input-button:focus {
 	background-color: #609FBF;
 	border-color: #5388B4;
 	color: #FFFFFF;
 }
+
 #Kunena .kattachment-remove,
 #Kunena .kattachment-insert {
 	background-color: #F2F1EE;
 	border-color: #999999;
 	color: #000000;
 }
+
 #Kunena .kattachment-remove:hover,
 #Kunena .kattachment-insert:hover {
 	color: #FFFFFF;
 }
+
 #Kunena #kbbcode-filelist .file-invalid {
 	color: #514721;
 }
+
 #Kunena #kbbcode-filelist .file-invalid span {
 	background-color: #fff6bf;
 }
+
 #Kunena #kbbcode-filelist .file .file-size {
 	color: #666;
 }
@@ -839,8 +923,9 @@ POLLS
 #kpoll-text-help {
 	background-color: #ff8f4f;
 }
+
 #kpoll-form-vote fieldset {
-	background-color:#FFFFFF;
+	background-color: #FFFFFF;
 }
 
 /* PATHWAY
@@ -851,6 +936,7 @@ POLLS
 	color: #000000;
 	background-color: #F2F1EE;
 }
+
 #Kunena .kforum-pathway-bottom {
 	border-color: #BFC3C6;
 	color: #000000;
@@ -870,14 +956,16 @@ FORUM HEADER DESCRIPTION
 HELP, RULES, UPLOAD AVATAR, ANNOUNCEMENT
 -------------------------------------------------------------------- */
 #Kunena td.kuadesc,
-#Kunena td.kcreditsdesc	{
+#Kunena td.kcreditsdesc {
 	/*border-color: #BFC3C6;*/
 	background-color: #FFFFFF;
 	color: #000000;
 }
+
 #Kunena .kcredits-intro {
 	border-color: #BFC3C6;
 }
+
 #Kunena .kcredits-more {
 	background-color: #F2F1EE;
 	border-color: #BFC3C6;
@@ -886,6 +974,7 @@ HELP, RULES, UPLOAD AVATAR, ANNOUNCEMENT
 #Kunena .kcredits-language {
 	border-color: #BFC3C6;
 }
+
 #Kunena tr.userlist th a {
 	color: #FFFFFF !important;
 }
@@ -907,8 +996,9 @@ HELP, RULES, UPLOAD AVATAR, ANNOUNCEMENT
 #Kunena div#kmod-container {
 	/*border-color: #BFC3C6;*/
 }
+
 #Kunena div.kmoderate-message {
-	border-color:#CCCCCC;
+	border-color: #CCCCCC;
 }
 
 /*       PROFILE
@@ -918,16 +1008,22 @@ HELP, RULES, UPLOAD AVATAR, ANNOUNCEMENT
 	background-color: #FFF;
 	border-color: #999999;
 }
+
 #Kunena div#kprofile-stats ul li span.konline-status-yes {
 	color: #fff;
 }
+
 #Kunena div#kprofile-stats ul li span.konline-status-no {
-	color:#fff;
+	color: #fff;
 }
+
 #Kunena div.clrline {
 	border-top-color: #BFC3C6;
 }
-#Kunena div.kprofile-rightcol1 h4 { color: #333333;}
+
+#Kunena div.kprofile-rightcol1 h4 {
+	color: #333333;
+}
 
 /* Tabs
 ----------------------------------*/
@@ -939,16 +1035,19 @@ HELP, RULES, UPLOAD AVATAR, ANNOUNCEMENT
 	background-color: #f0f0f0;
 	color: #666;
 }
+
 #Kunena dl.tabs dt.open {
 	background-color: #F9F9F9;
 	border-bottom-color: #F9F9F9;
 	color: #000;
 }
+
 #Kunena div.current {
 	border-color: #BFC3C6;
 }
+
 #Kunena dt.kprofile-modbtn {
-	background-color:#999999 !important;
+	background-color: #999999 !important;
 	color: #FFF !important;
 }
 
@@ -959,6 +1058,7 @@ HELP, RULES, UPLOAD AVATAR, ANNOUNCEMENT
 	color: #fff;
 	background-color: #5388B4;
 }
+
 #Kunena #kprofilebox-toggle {
 	border-color: #fff;
 }
@@ -967,20 +1067,21 @@ HELP, RULES, UPLOAD AVATAR, ANNOUNCEMENT
 ----------------------------------------------------------------------------------------------- */
 /* DO NOT ADD #Kunena into these rules! */
 ul.autocompleter-choices {
-	border-color:			#7c7c7c;
-	border-left-color:		#c3c3c3;
-	border-right-color:		#c3c3c3;
-	border-bottom-color:	#ddd;
-	background-color:		#fff;
-	font-family:			Verdana, Geneva, Arial, Helvetica, sans-serif;
-	background-color:		#fff;
+	border-color: #7c7c7c;
+	border-left-color: #c3c3c3;
+	border-right-color: #c3c3c3;
+	border-bottom-color: #ddd;
+	background-color: #fff;
+	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 }
+
 ul.autocompleter-choices li.kautocompleter-selected {
-	background-color:		#444;
-	color:					#fff;
+	background-color: #444;
+	color: #fff;
 }
+
 ul.autocompleter-choices li.kautocompleter-selected span.kautocompleter-queried {
-	color:					#9FCFFF;
+	color: #9FCFFF;
 }
 
 .autocompleter-choices .autocompleter-selected {
@@ -1002,9 +1103,11 @@ ul.autocompleter-choices li {
 	color: #000000;
 	background-color: #FFDDDD;
 }
+
 #Kunena tr.krow1-red td {
 	background-color: #FFDDDD;
 }
+
 #Kunena tr.krow2-red td {
 	background-color: #FFCFCF;
 }
@@ -1015,9 +1118,11 @@ ul.autocompleter-choices li {
 #Kunena .kforum-headerdesc-green {
 	background-color: #d2f8db;
 }
+
 #Kunena tr.krow1-green td {
 	background-color: #d2f8db;
 }
+
 #Kunena tr.krow2-green td {
 	background-color: #bfe5c7;
 }
@@ -1029,9 +1134,11 @@ ul.autocompleter-choices li {
 	color: #000000;
 	background-color: #FFFFCC;
 }
+
 #Kunena tr.krow1-yellow td {
 	background-color: #FFFFCC;
 }
+
 #Kunena tr.krow2-yellow td {
 	background-color: #FFFFAA;
 }
@@ -1043,9 +1150,11 @@ ul.autocompleter-choices li {
 	color: #000000;
 	background-color: #c3f0ff;
 }
+
 #Kunena tr.krow1-blue td {
 	background-color: #c3f0ff;
 }
+
 #Kunena tr.krow2-blue td {
 	background-color: #b1e3ff;
 }
@@ -1057,9 +1166,11 @@ ul.autocompleter-choices li {
 	color: #000000;
 	background-color: #e5e5e5;
 }
+
 #Kunena tr.krow1-grey td {
 	background-color: #e5e5e5;
 }
+
 #Kunena tr.krow2-grey td {
 	background-color: #d5d5d5;
 }
@@ -1071,9 +1182,11 @@ ul.autocompleter-choices li {
 	color: #000000;
 	background-color: #ffddff;
 }
+
 #Kunena tr.krow1-pink td {
 	background-color: #ffddff;
 }
+
 #Kunena tr.krow2-pink td {
 	background-color: #ffd0ff;
 }
@@ -1090,13 +1203,14 @@ ul.autocompleter-choices li {
 ----------------------------------------------------------------------------------------------- */
 
 .kgooglemap {
-	background-color:#E5E3DF;
+	background-color: #E5E3DF;
 }
 
 /* Fix Rockettheme issue arrow */
 .component-content h2::before {
 	content: none !important;
 }
+
 /* --------------------------------------------------------------- */
 
 /* Fix to avoid broken controls with google maps
@@ -1104,4 +1218,5 @@ ul.autocompleter-choices li {
 #Kunena div.kmsgbody div.kmsgtext div.kgooglemap img {
 	max-width: none !important;
 }
+
 /* --------------------------------------------------------------- */
